examples/misc/error/compilation/gen_negative-length-array.bfr
let main = $
  **let len = -1 in $
  $build {
    a: array(len) { x };
    b: cell;
  }
  + b